--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -8,4 +8,5 @@
 	<p><%= pi.body %></p>
 	<%= image_tag pi.thumb_image if !pi.thumb_image.nil? %>
 	<%= link_to "Edit", edit_portfolio_path(pi) %>
+	<%= link_to "Delete Portfolio Item", portfolio_path(portfolio_item), method: :delete, data: {confirm: 'Are you sure?'} %>
 <% end %>
