integrated the gem

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,8 @@
 
     <%= yield %> <!-- Ovo zapravo dinamicki ubacuje bilo koju povezanu stranu na ovo mesto u htmlu -->
 
+    <%= copyright_generator %>
+
     <%= source_helper("application") %>
   </body>
 </html>
