--- a/app/views/portfolios/angular.html.erb
+++ b/app/views/portfolios/angular.html.erb
@@ -1,12 +1,12 @@
 h1>Angular portfolio Items</h1>
 
-<%= link_to "Create New Item", new_portfolio_ulr %>
+<%= link_to "Create New Item", new_portfolio_ulr if logged_in?(:site_admin) %>
 
 <% @angular_portfolio_items.each do |pi| %>
 	<p><%= link_to pi.title, portfolio_show_path(pi) %></p>
 	<p><%= pi.subtitle %></p>
 	<p><%= pi.body %></p>
 	<%= image_tag pi.thumb_image if !pi.thumb_image.nil? %>
-	<%= link_to "Edit", edit_portfolio_path(pi) %>
-	<%= link_to "Delete Portfolio Item", portfolio_path(portfolio_item), method: :delete, data: {confirm: 'Are you sure?'} %>
+	<%= link_to "Edit", edit_portfolio_path(pi) if logged_in?(:site_admin)  %>
+	<%= link_to "Delete Portfolio Item", portfolio_path(portfolio_item), method: :delete, data: {confirm: 'Are you sure?'} if logged_in?(:site_admin)  %>
 <% end %>
