--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,17 +13,22 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <div class="site-wrapper">
+      <div class="site-wrapper-inner">
+        <div class="cover-container">
 
-    <%= render "shared/nav", location: 'top' %>
+          <%= render "shared/application_nav" %>
 
-    <%= login_helper %>
+          <%= login_helper %>
 
-    <%= yield %> <!-- Ovo zapravo dinamicki ubacuje bilo koju povezanu stranu na ovo mesto u htmlu -->
+          <%= yield %> <!-- Ovo zapravo dinamicki ubacuje bilo koju povezanu stranu na ovo mesto u htmlu -->
 
-    <%= copyright_generator %>
+          <%= copyright_generator %>
 
-    <%= source_helper("application") %>
+          <%= source_helper("application") %>
+
+        </div>
+      </div>
+    </div>
   </body>
 </html>
