--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,3 @@
-<h1>Pages#contact</h1>
+<h1>Obiously not real contact</h1>
 <p><%= number_to_phone "5555555555" %></p>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2830.1279627401364!2d20.45198851589727!3d44.81895767909867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a654cf599a64d%3A0x4f46401cd42800be!2sKafeterija+MAGAZIN+1907!5e0!3m2!1sen!2srs!4v1548199050418" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
