--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -96,7 +96,7 @@ body {
   border-bottom-color: #fff;
 }
 
-@media (min-width: 48em) {
+@media (min-width: 55em) {
   .masthead-brand {
     float: left;
   }
@@ -169,8 +169,25 @@ body {
 .card-block {
   color: black;
   text-align: left;
+  margin-left: 15px;
+  margin-right: 10px;
 }
 
 .auth-links a {
   color: black;
+}
+
+.row {
+  margin-left: 0px;
+  margin-right: 15px;
+}
+
+.register-text {
+  text-align: right;
+}
+
+.login > .card {
+  width: 22rem;
+  margin: 0 auto;
+  float: none;
 }
