--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -3,8 +3,8 @@
   <head>
     <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-    <meta name="keywords" content= "<%= @seo_keywords %>">
+
+    <meta name="keywords" content="<%= @seo_keywords %>" />
 
     <%= stylesheet_link_tag    'blogs', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -16,7 +16,7 @@
 
     <%= login_helper %>
 
-    <%= yield %> <!-- Ovo zapravo dinamicki ubacuje bilo koju povezanu stranu na ovo mesto u htmlu -->
+    <%= yield %>
 
     <%= render "shared/nav", location: 'bottom' %>
 
