--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -20,8 +20,9 @@
     <!-- Start of blog header -->
     <div class="blog-header">
       <div class="container">
-        <h1 class="blog-title">The Bootstrap Blog</h1>
+        <h1 class="blog-title">My Blog</h1>
         <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+        <%= link_to 'Write a New Blog', new_blog_path if logged_in?(:site_admin) %>
       </div>
     </div>
     <!-- End of blog header -->
@@ -31,7 +32,7 @@
       <div class="row">
     <!-- start of container and row -->
 
-        <%= login_helper %>
+        
 
         <%= yield %>
 
@@ -68,7 +69,7 @@
           </div>
         </div><!-- /.blog-sidebar -->
         <!-- end of side bar -->
-
+      </div>
         <!-- start of footer -->
         <footer class="blog-footer">
           <p>Blog template built for <a href="https://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
@@ -78,11 +79,9 @@
         </footer>
         <!-- end of footer -->
 
-        <%= render "shared/nav", location: 'bottom' %>
-
         <%= source_helper("blog") %>
       
-      </div>
+      
     </div>
   </body>
 </html>
