--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -16,16 +16,8 @@
   <body>
 
     <%= render 'shared/blog_nav' %>
-
-    <!-- Start of blog header -->
-    <div class="blog-header">
-      <div class="container">
-        <h1 class="blog-title">My Blog</h1>
-        <p class="lead blog-description">An example blog template built with Bootstrap.</p>
-        <%= link_to 'Write a New Blog', new_blog_path if logged_in?(:site_admin) %>
-      </div>
-    </div>
-    <!-- End of blog header -->
+    
+    <%= render 'shared/blog_masthead' %>
 
     <div class="container">
       <div class="row">
@@ -35,18 +27,11 @@
         <%= render 'shared/blog_sidebar' %>
 
       </div>
-        <!-- start of footer -->
-        <footer class="blog-footer">
-          <p>Blog template built for <a href="https://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-          <p>
-            <a href="#">Back to top</a>
-          </p>
-        </footer>
-        <!-- end of footer -->
+
+        <%= render 'shared/blog_footer' %>
 
         <%= source_helper("blog") %>
-      
-      
+
     </div>
   </body>
 </html>
