--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -51,11 +51,19 @@ body {
   font-size: 85%;
 }
 
-footer {
+.footer {
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
 
-footer p {
+.footer p {
   margin-bottom: .25rem;
+}
+
+.bg-inverse {
+  background: #343a40;
+}
+
+.navbar-toggler-icon {
+  color: light;
 }
