--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -51,12 +51,12 @@ body {
   font-size: 85%;
 }
 
-.footer {
+footer {
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
 
-.footer p {
+footer p {
   margin-bottom: .25rem;
 }
 
@@ -66,4 +66,8 @@ body {
 
 .navbar-toggler-icon {
   color: light;
+}
+
+.portfolio-form {
+  padding: 20px;
 }
