--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -15,7 +15,7 @@
   <body>
     <%= render 'shared/portfolio_nav' %>
 
-    <%= render 'shared/portfolio_masthead' %>
+    <%= render 'shared/portfolio_masthead' unless logged_in?(:site_admin) %>
 
     <%= yield %> <!-- Ovo zapravo dinamicki ubacuje bilo koju povezanu stranu na ovo mesto u htmlu -->
 
