integrated video background and some images

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,13 @@
 <h1>About me</h1>
-<p>I'm a guy learning how to bulid web apps using RonR.</p>
+
+<hr>
+
+<div class="row">
+	<div class="col-md-4">
+		<%= image_tag "pexels-photo-685526.jpeg", width: 300, alt: "some image" %>
+	</div>
+
+	<div class="col-md-8">
+		<p>I'm a guy learning how to bulid web apps using RonR.</p>
+	</div>
+</div>
